# softan-connect-python-sdk

./: .gitignore  CHANGELOG.md  __init__.py  add_env.py  client.py  crypto.py  headers.py  install.py  main.py  pyproject.toml  sdk.py  sdk_meta.json  services.py  softan_connect_sdk.md  switch_env.py
.github/workflows/: ci.yml  release.yml
tests/: test_services.py
